3 janvier au soir

--- a/README
+++ b/README
@@ -3,3 +3,5 @@ Ceci est un projet qui va me permettre d'apprendre à utiliser Git, un gestionna
 J'utilise comme cobaye un travail à faire en Java : un mini-jeu d'adresse.
 
 Merci d'avoir lu, et je vous souhaite de savoir comment maitriser Git !
+
+Test d'edit du Readname !
